@@ -15,6 +15,7 @@ import org.bsc.langgraph4j.state.AgentState;
 import org.bsc.langgraph4j.state.AgentStateFactory;
 import org.bsc.langgraph4j.state.StateSnapshot;
 import org.bsc.langgraph4j.utils.TryFunction;
+import org.bsc.langgraph4j.utils.TypeRef;
 
 import java.io.IOException;
 import java.util.*;
@@ -30,6 +31,7 @@ import static java.util.Objects.requireNonNull;
 import static java.util.Optional.ofNullable;
 import static java.util.concurrent.CompletableFuture.completedFuture;
 import static java.util.stream.Collectors.toList;
+import static org.bsc.langgraph4j.utils.CollectionsUtils.mergeMap;
 
 /**
  * Represents a compiled graph of nodes and edges.
@@ -184,11 +186,11 @@ public final class CompiledGraph<State extends AgentState> implements GraphDefin
      * @return collection of StateSnapshots of the given Thread ID. The first element of collection is the last state
      */
     public Collection<StateSnapshot<State>> getStateHistory( RunnableConfig config ) {
-        BaseCheckpointSaver saver = compileConfig.checkpointSaver().orElseThrow( () -> (new IllegalStateException("Missing CheckpointSaver!")) );
+        final var saver = compileConfig.checkpointSaver().orElseThrow( () -> (new IllegalStateException("Missing CheckpointSaver!")) );
 
         return saver.list(config).stream()
                 .map( checkpoint -> StateSnapshot.of( checkpoint, config, stateGraph.getStateFactory() ) )
-                .collect(toList());
+                .toList();
     }
 
 
@@ -211,7 +213,7 @@ public final class CompiledGraph<State extends AgentState> implements GraphDefin
      * @throws IllegalStateException if the saver is not defined
      */
     public Optional<StateSnapshot<State>> stateOf( RunnableConfig config ) {
-        BaseCheckpointSaver saver = compileConfig.checkpointSaver().orElseThrow( () -> (new IllegalStateException("Missing CheckpointSaver!")) );
+        final var saver = compileConfig.checkpointSaver().orElseThrow( () -> (new IllegalStateException("Missing CheckpointSaver!")) );
 
         return saver.get(config)
                 .map( checkpoint -> StateSnapshot.of( checkpoint, config, stateGraph.getStateFactory() ) );
@@ -240,28 +242,29 @@ public final class CompiledGraph<State extends AgentState> implements GraphDefin
      */
     public RunnableConfig updateState( RunnableConfig config, Map<String,Object> values, String asNode ) throws Exception {
 
-        BaseCheckpointSaver saver = compileConfig.checkpointSaver().orElseThrow( () -> (new IllegalStateException("Missing CheckpointSaver!")) );
+        final var saver = compileConfig.checkpointSaver().orElseThrow( () -> (new IllegalStateException("Missing CheckpointSaver!")) );
 
         // merge values with checkpoint values
-        Checkpoint branchCheckpoint = saver.get(config)
+        var branchCheckpoint = saver.get(config)
                             .map(Checkpoint::copyOf)
                             .map( cp -> cp.updateState(values, stateGraph.getChannels()) )
                             .orElseThrow( () -> (new IllegalStateException("Missing Checkpoint!")) );
 
         String nextNodeId = null;
         if( asNode != null ) {
-            var nextNodeCommand = nextNodeId( asNode, branchCheckpoint.getState(), config );
+            final var nextNodeCommand = nextNodeId( asNode, branchCheckpoint.getState(), config );
 
             nextNodeId = nextNodeCommand.gotoNode();
             branchCheckpoint =  branchCheckpoint.updateState( nextNodeCommand.update(), stateGraph.getChannels(), nextNodeId );
 
         }
         // update checkpoint in saver
-        RunnableConfig newConfig = saver.put( config, branchCheckpoint );
+        final var newConfig = saver.put( config, branchCheckpoint );
 
         return RunnableConfig.builder(newConfig)
                                 .checkPointId( branchCheckpoint.getId() )
                                 .nextNode( nextNodeId )
+                                .addMetadata( RunnableConfig.SUBGRAPH_RESUME_UPDATE_DATA, values )
                                 .build();
     }
 
@@ -362,7 +365,7 @@ public final class CompiledGraph<State extends AgentState> implements GraphDefin
     }
 
     private Command entryPoint(Map<String,Object> state, RunnableConfig config ) throws Exception {
-        var entryPoint = this.edges.get(START);
+        final var entryPoint = this.edges.get(START);
         return nextNodeId(entryPoint, state, START, config);
     }
 
@@ -433,7 +436,7 @@ public final class CompiledGraph<State extends AgentState> implements GraphDefin
      * @return an AsyncGenerator stream of NodeOutput
      */
     public AsyncGenerator.Cancellable<NodeOutput<State>> stream( Map<String,Object> inputs, RunnableConfig config ) {
-        return stream(  ( inputs == null ) ? new GraphResume() : new GraphArgs(inputs), config );
+        return stream(  ( inputs == null ) ? GraphInput.resume() : GraphInput.args(inputs), config );
     }
 
     /**
@@ -443,7 +446,7 @@ public final class CompiledGraph<State extends AgentState> implements GraphDefin
      * @return an AsyncGenerator stream of NodeOutput
      */
     public AsyncGenerator<NodeOutput<State>> stream(Map<String,Object> inputs ) {
-        return this.stream( GraphInput.args(inputs), RunnableConfig.builder().build() );
+        return this.stream( ( inputs == null ) ? GraphInput.resume() : GraphInput.args(inputs), RunnableConfig.builder().build() );
     }
 
     /**
@@ -469,7 +472,7 @@ public final class CompiledGraph<State extends AgentState> implements GraphDefin
      * @return an AsyncGenerator stream of NodeOutput
      */
     public AsyncGenerator.Cancellable<NodeOutput<State>> streamSnapshots( Map<String,Object> inputs, RunnableConfig config )  {
-        return streamSnapshots( ( inputs == null ) ? new GraphResume() : new GraphArgs(inputs), config );
+        return streamSnapshots( ( inputs == null ) ? GraphInput.resume() : GraphInput.args(inputs), config );
     }
 
     /**
@@ -509,7 +512,7 @@ public final class CompiledGraph<State extends AgentState> implements GraphDefin
      * @return an Optional containing the final state if present, otherwise an empty Optional
      */
     public Optional<State> invoke(Map<String,Object> inputs, RunnableConfig config ) {
-        return invokeFinal( GraphInput.args(inputs), config ).map( NodeOutput::state);
+        return invokeFinal( inputs == null ? GraphInput.resume() : GraphInput.args(inputs), config ).map( NodeOutput::state);
     }
 
     /**
@@ -519,7 +522,7 @@ public final class CompiledGraph<State extends AgentState> implements GraphDefin
      * @return an Optional containing the final state if present, otherwise an empty Optional
      */
     public Optional<State> invoke(Map<String,Object> inputs )  {
-        return invokeFinal( GraphInput.args(inputs), RunnableConfig.builder().build() ).map( NodeOutput::state);
+        return invokeFinal( inputs == null ? GraphInput.resume() : GraphInput.args(inputs), RunnableConfig.builder().build() ).map( NodeOutput::state);
     }
 
 
@@ -658,48 +661,63 @@ public final class CompiledGraph<State extends AgentState> implements GraphDefin
         final RunnableConfig config;
 
         protected AsyncNodeGenerator(GraphInput input, RunnableConfig config )  {
+            final var configBuilder = RunnableConfig.builder(config)
+                    .checkPointId(null); // Reset checkpoint id
 
             if( input instanceof GraphResume resumeRequest ) {
-
                 log.trace( "RESUME REQUEST" );
 
-                var saver = compileConfig.checkpointSaver()
+                final var saver = compileConfig.checkpointSaver()
                         .orElseThrow(() -> (new IllegalStateException("Resume request without a configured checkpoint saver!")));
-                var startCheckpoint = saver.get( config )
+                final var startCheckpoint = saver.get( config )
                         .orElseThrow( () -> (new IllegalStateException("Resume request without a valid checkpoint!")) );
 
-                var startCheckpointNextNodeAction = nodes.get(startCheckpoint.getNextNodeId());
+                final var optionalResumeUpdateData = config.metadata(RunnableConfig.SUBGRAPH_RESUME_UPDATE_DATA, new TypeRef<Map<String,Object>>() {});
+
+                context = new Context(startCheckpoint);
+
+                final var startCheckpointNextNodeAction = nodes.get(startCheckpoint.getNextNodeId());
                 if( startCheckpointNextNodeAction instanceof SubCompiledGraphNodeAction<State> action ) {
 
                     // RESUME FORM SUBGRAPH DETECTED
+                    final var resumeUpdateData = optionalResumeUpdateData
+                            .map( data -> mergeMap( data, resumeRequest.value() ))
+                            .orElseGet(resumeRequest::value);
 
-                    this.config = RunnableConfig.builder(config)
-                                 .checkPointId(null) // Reset checkpoint id
-                                .addMetadata( action.resumeSubGraphId(), true) // add metadata for sub graph
-                                .build();
+                    // RESUME FORM SUBGRAPH DETECTED
+                    this.config = configBuilder
+                            .addMetadata( action.resumeSubGraphId(), true)
+                            .putMetadata( RunnableConfig.SUBGRAPH_RESUME_UPDATE_DATA, resumeUpdateData )
+                            .build();
+
+                    context.setCurrentState( startCheckpoint.getState() );
+
                 }
                 else {
-                    // Reset checkpoint id
-                    this.config = config.withCheckPointId( null );
+                    final var stateData = optionalResumeUpdateData.orElseGet(resumeRequest::value);
+                    this.config = configBuilder
+                            .removeMetadata( RunnableConfig.SUBGRAPH_RESUME_UPDATE_DATA )
+                            .build();
+                    // FIX ISSUE #302
+                    context.setCurrentState( AgentState.updateState( startCheckpoint.getState(),
+                            stateData,
+                            stateGraph.getChannels() ));
 
                 }
 
-                context = new Context(startCheckpoint);
-                // FIX ISSUE #302
-                context.setCurrentState( AgentState.updateState( startCheckpoint.getState(),
-                                                                resumeRequest.value(),
-                                                                stateGraph.getChannels() ));
                 log.trace( "RESUME FROM {}", startCheckpoint.getNodeId() );
             }
             else {
 
                 log.trace( "START" );
                 
-                Map<String,Object> initState = initialState( ((GraphArgs)input).value(), config );
+                final var initState = initialState( ((GraphArgs)input).value(), config );
                 // patch for backward support of AppendableValue
                 State initializedState = stateGraph.getStateFactory().apply(initState);
                 this.context = new Context( initializedState.data() );
-                this.config = config.withCheckPointId( null );
+                this.config = configBuilder
+                                .removeMetadata(RunnableConfig.SUBGRAPH_RESUME_UPDATE_DATA)
+                                .build();
             }
         }
 
